--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.8.2",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
@@ -17,8 +18,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
+    "react-toastify": "^9.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
