--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.2",
     "jquery": "^3.6.0",
+    "paypal": "^1.0.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
