--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.2",
+    "framer-motion": "^6.3.10",
     "jquery": "^3.6.0",
-    "paypal": "^1.0.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
