--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.8.2",
     "framer-motion": "^6.3.10",
     "jquery": "^3.6.0",
+    "nodemailer": "^6.7.5",
     "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
